--- a/css/global.css
+++ b/css/global.css
@@ -775,12 +775,6 @@ textarea {
 		line-height: 72px;
 		letter-spacing: -0.03em;
 	}
-	.input {
-		padding: 0 48px 0 32px;
-		height: 80px;
-		font-size: 18px;
-		line-height: 24px;
-	}
 	.header__logo {
 		margin-right: 152px;
 	}
@@ -788,6 +782,14 @@ textarea {
 @media (min-width: 1400px) {
 	.container {
 		max-width: 1400px;
+	}
+}
+@media (min-width: 1600px) {
+	.input {
+		padding: 0 48px 0 32px;
+		height: 80px;
+		font-size: 18px;
+		line-height: 24px;
 	}
 }
 @media (min-width: 1840px) {
